<resources>
    <string name="app_name">ConnectOrph</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="nameHint">Your Full Name</string>
    <string name="email">Email Address</string>
    <string name="emailHint">someone@example.com</string>
    <string name="orphanage_id">Orphanage ID</string>
    <string name="password">Password</string>
    <string name="passwordHint">Password</string>
    <string name="retypePasswordHint">Retype Password</string>
    <string name="phoneNumberHint">Phone Number</string>
    <string name="address">Address</string>
    <string name="addressLine1">Street Address</string>
    <string name="addressLine2">Street Address Line 2</string>
    <string name="city">City</string>
    <string-array name="state">
        <item>[State]</item>
        <item>Andaman and Nicobar Island</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>
    <string name="zipCode">Postal/Zip Code</string>
    <string name="country">Country</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="registerOrphanage">Register as an Orphanage</string>
    <string name="registerDonor">Register as a Donor</string>
    <string-array name="stateDefault">
        <item>[State]</item>
    </string-array>
    <string-array name="cityDefault">
        <item>[City]</item>
    </string-array>
    <string-array name="cityAndaman_and_Nicobar_Island">
        <item>Port Blair</item>
    </string-array>
    <string-array name="cityAndhra_Pradesh">
        <item>Adoni</item>
        <item>Amalapuram</item>
        <item>Anakapalle</item>
        <item>Anantapur</item>
        <item>Bapatla</item>
        <item>Bheemunipatnam</item>
        <item>Bhimavaram</item>
        <item>Bobbili</item>
        <item>Chilakaluripet</item>
        <item>Chirala</item>
        <item>Chittoor</item>
        <item>Dharmavaram</item>
        <item>Eluru</item>
        <item>Gooty</item>
        <item>Gudivada</item>
        <item>Gudur</item>
        <item>Guntakal</item>
        <item>Guntur</item>
        <item>Hindupur</item>
        <item>Jaggaiahpet</item>
        <item>Jammalamadugu</item>
        <item>Kadapa</item>
        <item>Kadiri</item>
        <item>Kakinada</item>
        <item>Kandukur</item>
        <item>Kavali</item>
        <item>Kovvur</item>
        <item>Kurnool</item>
        <item>Macherla</item>
        <item>Machilipatnam</item>
        <item>Madanapalle</item>
        <item>Mandapeta</item>
        <item>Markapur</item>
        <item>Nagari</item>
        <item>Naidupet</item>
        <item>Nandyal</item>
        <item>Narasapuram</item>
        <item>Narasaraopet</item>
        <item>Narsipatnam</item>
        <item>Nellore</item>
        <item>Nidadavole</item>
        <item>Nuzvid</item>
        <item>Ongole</item>
        <item>Palacole</item>
        <item>Palasa Kasibugga</item>
        <item>Parvathipuram</item>
        <item>Pedana</item>
        <item>Peddapuram</item>
        <item>Pithapuram</item>
        <item>Ponnur</item>
        <item>Proddatur</item>
        <item>Punganur</item>
        <item>Puttur</item>
        <item>Rajahmundry</item>
        <item>Rajam</item>
        <item>Rajampet</item>
        <item>Ramachandrapuram</item>
        <item>Rayachoti</item>
        <item>Rayadurg</item>
        <item>Renigunta</item>
        <item>Repalle</item>
        <item>Salur</item>
        <item>Samalkot</item>
        <item>Sattenapalle</item>
        <item>Srikakulam</item>
        <item>Srikalahasti</item>
        <item>Srisailam Project (Right Flank Colony) Township</item>
        <item>Sullurpeta</item>
        <item>Tadepalligudem</item>
        <item>Tadpatri</item>
        <item>Tanuku</item>
        <item>Tenali</item>
        <item>Tirupati</item>
        <item>Tiruvuru</item>
        <item>Tuni</item>
        <item>Uravakonda</item>
        <item>Venkatagiri</item>
        <item>Vijayawada</item>
        <item>Vinukonda</item>
        <item>Visakhapatnam</item>
        <item>Vizianagaram</item>
        <item>Yemmiganur</item>
        <item>Yerraguntla</item>
    </string-array>
    <string-array name="cityArunachal_Pradesh">
        <item>Naharlagun</item>
        <item>Pasighat</item>
    </string-array>
    <string-array name="cityAssam">
        <item>Barpeta</item>
        <item>Bongaigaon City</item>
        <item>Dhubri</item>
        <item>Dibrugarh</item>
        <item>Diphu</item>
        <item>Goalpara</item>
        <item>Guwahati</item>
        <item>Jorhat</item>
        <item>Karimganj</item>
        <item>Lanka</item>
        <item>Lumding</item>
        <item>Mangaldoi</item>
        <item>Mankachar</item>
        <item>Margherita</item>
        <item>Mariani</item>
        <item>Marigaon</item>
        <item>Nagaon</item>
        <item>Nalbari</item>
        <item>North Lakhimpur</item>
        <item>Rangia</item>
        <item>Sibsagar</item>
        <item>Silapathar</item>
        <item>Silchar</item>
        <item>Tezpur</item>
        <item>Tinsukia</item>
    </string-array>
    <string-array name="cityBihar">
        <item>Araria</item>
        <item>Arrah</item>
        <item>Arwal</item>
        <item>Asarganj</item>
        <item>Aurangabad</item>
        <item>Bagaha</item>
        <item>Barh</item>
        <item>Begusarai</item>
        <item>Bettiah</item>
        <item>Bhabua</item>
        <item>Bhagalpur</item>
        <item>Buxar</item>
        <item>Darbhanga</item>
        <item>Dehri-on-Sone</item>
        <item>Dumraon</item>
        <item>Forbesganj</item>
        <item>Gaya</item>
        <item>Gopalganj</item>
        <item>Hajipur</item>
        <item>Jamalpur</item>
        <item>Jamui</item>
        <item>Jehanabad</item>
        <item>Katihar</item>
        <item>Kishanganj</item>
        <item>Lakhisarai</item>
        <item>Lalganj</item>
        <item>Madhepura</item>
        <item>Madhubani</item>
        <item>Maharajganj</item>
        <item>Mahnar Bazar</item>
        <item>Makhdumpur</item>
        <item>Maner</item>
        <item>Manihari</item>
        <item>Marhaura</item>
        <item>Masaurhi</item>
        <item>Mirganj</item>
        <item>Mokameh</item>
        <item>Motihari</item>
        <item>Motipur</item>
        <item>Munger</item>
        <item>Murliganj</item>
        <item>Muzaffarpur</item>
        <item>Narkatiaganj</item>
        <item>Naugachhia</item>
        <item>Nawada</item>
        <item>Nokha</item>
        <item>Patna</item>
        <item>Piro</item>
        <item>Purnia</item>
        <item>Rafiganj</item>
        <item>Rajgir</item>
        <item>Ramnagar</item>
        <item>Raxaul Bazar</item>
        <item>Revelganj</item>
        <item>Rosera</item>
        <item>Saharsa</item>
        <item>Samastipur</item>
        <item>Sasaram</item>
        <item>Sheikhpura</item>
        <item>Sheohar</item>
        <item>Sherghati</item>
        <item>Silao</item>
        <item>Sitamarhi</item>
        <item>Siwan</item>
        <item>Sonepur</item>
        <item>Sugauli</item>
        <item>Sultanganj</item>
        <item>Supaul</item>
        <item>Warisaliganj</item>
    </string-array>
    <string-array name="cityChandigarh">
        <item>Chandigarh</item>
    </string-array>
    <string-array name="cityChhattisgarh">
        <item>Ambikapur</item>
        <item>Bhatapara</item>
        <item>Bhilai Nagar</item>
        <item>Bilaspur</item>
        <item>Chirmiri</item>
        <item>Dalli-Rajhara</item>
        <item>Dhamtari</item>
        <item>Durg</item>
        <item>Jagdalpur</item>
        <item>Korba</item>
        <item>Mahasamund</item>
        <item>Manendragarh</item>
        <item>Mungeli</item>
        <item>Naila Janjgir</item>
        <item>Raigarh</item>
        <item>Raipur</item>
        <item>Rajnandgaon</item>
        <item>Sakti</item>
        <item>Tilda Newra</item>
    </string-array>
    <string-array name="cityDadra_and_Nagar_Haveli">
        <item>Silvassa</item>
    </string-array>
    <string-array name="cityDelhi">
        <item>Delhi</item>
    </string-array>
    <string-array name="cityGoa">
        <item>Mapusa</item>
        <item>Margao</item>
        <item>Marmagao</item>
        <item>Panaji</item>
    </string-array>
    <string-array name="cityGujarat">
        <item>Adalaj</item>
        <item>Ahmedabad</item>
        <item>Amreli</item>
        <item>Anand</item>
        <item>Anjar</item>
        <item>Ankleshwar</item>
        <item>Bharuch</item>
        <item>Bhavnagar</item>
        <item>Bhuj</item>
        <item>Chhapra</item>
        <item>Deesa</item>
        <item>Dhoraji</item>
        <item>Godhra</item>
        <item>Jamnagar</item>
        <item>Kadi</item>
        <item>Kapadvanj</item>
        <item>Keshod</item>
        <item>Khambhat</item>
        <item>Lathi</item>
        <item>Limbdi</item>
        <item>Lunawada</item>
        <item>Mahesana</item>
        <item>Mahuva</item>
        <item>Manavadar</item>
        <item>Mandvi</item>
        <item>Mangrol</item>
        <item>Mansa</item>
        <item>Mahemdabad</item>
        <item>Modasa</item>
        <item>Morvi</item>
        <item>Nadiad</item>
        <item>Navsari</item>
        <item>Padra</item>
        <item>Palanpur</item>
        <item>Palitana</item>
        <item>Pardi</item>
        <item>Patan</item>
        <item>Petlad</item>
        <item>Porbandar</item>
        <item>Radhanpur</item>
        <item>Rajkot</item>
        <item>Rajpipla</item>
        <item>Rajula</item>
        <item>Ranavav</item>
        <item>Rapar</item>
        <item>Salaya</item>
        <item>Sanand</item>
        <item>Savarkundla</item>
        <item>Sidhpur</item>
        <item>Sihor</item>
        <item>Songadh</item>
        <item>Surat</item>
        <item>Talaja</item>
        <item>Thangadh</item>
        <item>Tharad</item>
        <item>Umbergaon</item>
        <item>Umreth</item>
        <item>Una</item>
        <item>Unjha</item>
        <item>Upleta</item>
        <item>Vadnagar</item>
        <item>Vadodara</item>
        <item>Valsad</item>
        <item>Vapi</item>
        <item>Vapi</item>
        <item>Veraval</item>
        <item>Vijapur</item>
        <item>Viramgam</item>
        <item>Visnagar</item>
        <item>Vyara</item>
        <item>Wadhwan</item>
        <item>Wankaner</item>
    </string-array>
</resources>